# cpp2-assessment-client

./: .gitignore  CMakeLists.txt
include/: Application.h  ConsolePrintHelpers.h  Constants.h
include/commands/: AbstractCommand.h  CommandFactory.h  CommandName.h  CommandSelector.h
include/commands/implementations/: DeleteCommand.h  DownloadRemoteFileCommand.h  MakeDirectoryCommand.h  QuitCommand.h  RenameCommand.h  RequestDirectoryListingCommand.h  ServerInformationCommand.h  SynchronizeDirectoryCommand.h  UploadLocalFileCommand.h
include/communication/: Client.h  ServerConnection.h
include/filesystem/: FileInfo.h  FileSystemManager.h  FileType.h  FileTypeMapper.h
include/helpers/: ErrorCheckHelpers.h  UserInterfaceHelpers.h
src/: Application.cpp  Client.cpp  Main.cpp
src/commands/: CommandFactory.cpp  CommandSelector.cpp
src/commands/implementations/: DeleteCommand.cpp  DownloadRemoteFileCommand.cpp  MakeDirectoryCommand.cpp  QuitCommand.cpp  RenameCommand.cpp  RequestDirectoryListingCommand.cpp  ServerInformationCommand.cpp  SynchronizeDirectoryCommand.cpp  UploadLocalFileCommand.cpp
src/communication/: Client.cpp  ServerConnection.cpp
src/filesystem/: FileInfo.cpp  FileSystemManager.cpp
src/helpers/: ErrorCheckHelpers.cpp  UserInterfaceHelpers.cpp
